advise endpoints documentation finished
