# Backend/app/Http/Controllers/API/AdvisesController.php
@@ -9,9 +9,66 @@ use App\Models\Advises;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Validator;
 
+
+/**
+ * @OA\Tag(
+ *     name="Advises",
+ *     description="Endpoints for Advises"
+ * )
+ */
 class AdvisesController extends Controller {
     
 
+
+
+    /**
+ * @OA\Post(
+ *     path="/api/advises/create",
+ *     tags={"Advises"},
+ *     summary="Create a new advise. Only for ADMIN",
+ *     operationId="createAdvise",
+ *     @OA\RequestBody(
+ *         description="Advise to add",
+ *         required=true,
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="title", type="string"),
+ *             @OA\Property(property="description", type="string"),
+ *             @OA\Property(property="time_start", type="string", format="date-time"),
+ *             @OA\Property(property="time_end", type="string", format="date-time")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Advise created successfully",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(
+ *                 property="data",
+ *                 type="object",
+ *                 @OA\Property(property="id", type="integer"),
+ *                 @OA\Property(property="title", type="string"),
+ *                 @OA\Property(property="description", type="string"),
+ *                 @OA\Property(property="time_start", type="string", format="date-time"),
+ *                 @OA\Property(property="time_end", type="string", format="date-time"),
+ *                 @OA\Property(property="created_at", type="string", format="date-time"),
+ *                 @OA\Property(property="updated_at", type="string", format="date-time")
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Bad Request"
+ *     ),
+ *     @OA\Response(
+ *         response=403,
+ *         description="Unauthorized"
+ *     ),
+ *     security={
+ *         {"Bearer": {}}
+ *     }
+ * )
+ */
     public function createAdvise(Request $request){
 
         if ($request->user()->is_admin != true) {
@@ -34,6 +91,41 @@ class AdvisesController extends Controller {
 
     }
 
+
+    /**
+ * @OA\Get(
+ *     path="/api/advises/get",
+ *     tags={"Advises"},
+ *     summary="Get all active advises",
+ *     operationId="getActualAdvises",
+ *     @OA\Response(
+ *         response=200,
+ *         description="Active advises retrieved successfully",
+ *         @OA\JsonContent(
+ *             type="array",
+ *             @OA\Items(
+ *                 type="object",
+ *                 @OA\Property(property="id", type="integer"),
+ *                 @OA\Property(property="time_start", type="string", format="date-time"),
+ *                 @OA\Property(property="time_end", type="string", format="date-time"),
+ *                 @OA\Property(property="created_at", type="string", format="date-time"),
+ *                 @OA\Property(property="updated_at", type="string", format="date-time")
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Bad Request"
+ *     ),
+ *     @OA\Response(
+ *         response=403,
+ *         description="Unauthorized"
+ *     ),
+ *     security={
+ *         {"Bearer": {}}
+ *     }
+ * )
+ */
     public function getActualAdvises(Request $request){
         $now = now();
         $advises = Advises::where('time_start', '<=', $now)
